2010-10-11  d+w3m@vdr.jp

	* [w3m-dev 04414] Re: "normal" bugs from bugs.debian.org
	* doc/w3m.1: add documents about some options.
	* doc/FAQ.html: fix typo.

2010-08-24   Karsten Schoelzel <kuser@gmx.de>

	* [w3m-dev 04393] [patch] locale-related character management
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=313365
	* libwc/map/ucs_isalpha.map: added
	* libwc/map/ucs_islower.map: added
	* libwc/map/ucs_isupper.map: added
	* libwc/map/mk_ucs_case_map.pl: added
	* libwc/map/ucs_case.map: added
	* libwc/map/mk_ucs_isdigit_map.pl: added
	* libwc/map/ucs_isdigit.map: added
	* libwc/ucs.c (wc_any_to_ucs): ceck if cc.ccs == WC_CCS_US_ASCII
	(wc_is_ucs_alpha, wc_is_ucs_digit, wc_is_ucs_alnum)
	(wc_is_ucs_lower, wc_is_ucs_upper, wc_ucs_toupper)
	(wc_ucs_tolower, wc_ucs_totitle): added
	* regex.c (match_longchar, match_range_longchar): use wc_any_to_ucs(), wc_ucs_tolower(), wc_ucs_toupper() and wc_ucs_totitle()
	* main.c (nextChar, prevChar, getChar, is_wordchar): added
	(movLW): use prevChar() and is_wordchar()
	(movRW): use nextChar() and is_wordchar()
	(getCurWord): remove 4th parameter
	(getCurWord): use prevChar(), nextChar() and is_wordchar()

2010-08-20  Karsten Schoelzel <kuser@gmx.de>

	* [w3m-dev 04401] Re: mailto with options handling
	* rc.c: Introduce option mailto_options
	* main.c (handleMailto): added
	(followA, cmd_loadURL): use handleMailto()
	* fm.h (MAILTO_OPTIONS_USE_W3MMAILER, MAILTO_OPTIONS_IGNORE)
	(MAILTO_OPTIONS_USE_MAILTO_URL): added

2010-08-20  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04402] Re: "normal" bugs from bugs.debian.org
	* terms.c (reset_exit_with_value, reset_error_exit): added
	(reset_exit): use reset_exit_with_value()
	(ttymode_set, ttymode_reset, set_cc, getTCstr)
	(sleep_till_anykey): use reset_error_exit() instead of reset_exit()

2010-08-14  "Adam C. Emerson" <azure@azureprime.com>

	* [w3m-dev 04390]
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=573789
	* html.c: All elements have the id attribute.
